# clipper

./: Makefile  README  clipper.cabal  stack.yaml
Algebra/: Clipper.hsc
cbits/: clipper_c_wrapper.cpp  clipper_c_wrapper.hpp
