Name:                clipper
Version:             0.0.2
Synopsis:            Haskell API to clipper (2d polygon union/intersection/xor/clipping API)
Description:         This is a haskell FFI to clipper (<http://www.angusj.com/delphi/clipper.php>)
                     .
                     NOTE: To compile, please specify the C++ compiler by passing --with-gcc=<CXX>
Homepage:            https://github.com/chetant/clipper
License:             BSD3
License-file:        LICENSE
Author:              Chetan Taralekar <chetant@gmail.com>
Maintainer:          Chetan Taralekar <chetant@gmail.com>
Category:            Algebra

Build-type:          Simple
Extra-source-files:  README
                     test/Test.hs
                     test/test.cpp
Cabal-version:       >=1.18
Library
  Exposed-modules:    Algebra.Clipper
  Build-depends:      base >= 4 && < 5
  Build-tools:        hsc2hs
  Extra-libraries:    stdc++ polyclipping
  Extra-include-dirs: /usr/local/include
  Extra-lib-dirs:     /usr/local/lib
  Include-dirs:       cbits
  C-sources:          cbits/clipper_c_wrapper.cpp
